using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using UnityEngine.UI;

public class PlayerScript : MonoBehaviour
{
    public Rigidbody rb;
    public Animator animator;

    [Header("Scripts")]
    [SerializeField] private LapController controller;
    [SerializeField] private CameraFollowing cameraFollowing;
    [SerializeField] private VirtualJoyStick joystick;

    [Header("Movement")]
    [SerializeField] private float maxSpeed = 30f; // 최대 속도
    [SerializeField] private float boostSpeed;
    [SerializeField] private float forceMultiplier = 1200f; // 힘의 배수
    [SerializeField] private float decelerationForce = 5f; // 감속력
    [SerializeField] private float reverseForceMultiplier = 0.1f; // 후진 힘 배수
    public LayerMask roadLayerMask; // Road LayerMask 설정
    private bool isMovingForward = false;
    private bool isMovingBack = false;

    [Header("Jump")]
    [SerializeField] private float jumpForce = 8f;
    [SerializeField] private float fallMultiplier = 2.5f; // 점프 후 떨어지는 중력 가속도 계수
    private bool isJumping = false;
    private int jumpCount = 0; // 점프 횟수 관리 변수
    private int maxJump = 1; // 최대 점프 횟수

    [Header("Steering & Drift")]
    [SerializeField] private float rotateSpeed = 40f;
    [SerializeField] private float driftPower = 1000f;
    private float originalRotateSpeed;
    private float currentRotationSpeed;
    public float tiltAngle = 10f;
    private bool isDrifting = false;

    [Header("Booster")]
    public Slider driftSlider; // 드리프트 게이지 슬라이더
    [SerializeField] private float driftFillRate = 0.2f; // 게이지 충전률
    private float driftDecreaseRate = 1.5f;
    public int maxBoost = 2; // 최대 부스터 개수
    public int currentBoost = 0; // 현재 부스터 개수
    public float boostDuration = 5f; // 부스터 활성화 유지 시간
    private bool isBoosting = false;

    [Header("LapControl")]
    [SerializeField] private LapController lapController;

    [Header("Effects")]
    public ParticleSystem speedLineParticleSystem;
    public ParticleSystem LeftboostFire;
    public ParticleSystem RightboostFire;
    public TrailRenderer LeftSkid;
    public TrailRenderer RightSkid;

    [Header("Audio")]
    public AudioSource movingAudioSource; // 움직임 소리용 AudioSource
    public AudioSource boostingAudioSource; // 부스터 소리용 AudioSource
    public AudioSource boostWindAudioSource; // 부스터 사용 시 바람 소리 AudioSource
    public AudioSource driftAudioSource; // 드리프트 소리용 AudioSource
    public AudioClip[] audioClips;

    private bool isPause;


    private void Start()
    {
        rb = GetComponent<Rigidbody>();
        animator = GetComponent<Animator>();

        // Rigidbody의 중력 설정
        rb.useGravity = true; // Rigidbody의 기본 중력 사용

        originalRotateSpeed = rotateSpeed;

        isPause = false;

        if (SystemInfo.supportsGyroscope)
        {
            Input.gyro.enabled = true;
        }
    }

    private void FixedUpdate()
    {
        if (!controller.isFinish && !cameraFollowing.isStarting)
        {
            if (isDrifting)
            {
                Drift(); // 드리프트 시작
            }
            else
            {
                // 드리프트 멈추기 로직
                if (driftAudioSource.isPlaying)
                {
                    driftAudioSource.Stop(); // 오디오 정지
                }

                LeftSkid.emitting = false;
                RightSkid.emitting = false;

                // 회전속도 점차 복원
                currentRotationSpeed = Mathf.Lerp(currentRotationSpeed, originalRotateSpeed, Time.deltaTime * 20);
                rotateSpeed = currentRotationSpeed;
            }
        }


        else if (controller.isFinish)
        {
            animator.SetBool("Cute", true);
        }
    }

    public void Move(float verticalInput)
    {
        if (verticalInput > 0)
        {
            verticalInput = 1.0f;
        }
        else if (verticalInput < 0)
        {
            verticalInput = -1.0f;
        }

        bool isOnRoad = Physics.Raycast(transform.position, -transform.up, 1f, roadLayerMask);
        float speedMultiplier = isOnRoad ? 1.0f : 0.7f;

        if (Mathf.Abs(verticalInput) > 0.01f)
        {
            if (!movingAudioSource.isPlaying)
            {
                movingAudioSource.clip = audioClips[0];
                movingAudioSource.Play();
            }
            movingAudioSource.pitch = isBoosting ? 1.3f : 1.0f;
        }
        else if (movingAudioSource.isPlaying)
        {
            movingAudioSource.Stop();
        }

        Vector3 forceDirection = transform.forward * verticalInput * speedMultiplier;
        float forceMultiplierAdjusted = verticalInput < 0 ? forceMultiplier * reverseForceMultiplier : forceMultiplier;
        Vector3 force = forceDirection * forceMultiplierAdjusted * speedMultiplier;

        if (!isBoosting)
        {
            if (rb.velocity.magnitude > maxSpeed * speedMultiplier)
            {
                rb.velocity = rb.velocity.normalized * maxSpeed * speedMultiplier;
            }

            if (Mathf.Approximately(verticalInput, 0) && rb.velocity.magnitude > 0.1f)
            {
                rb.AddForce(-rb.velocity.normalized * decelerationForce, ForceMode.Force);
            }
            else
            {
                rb.AddForce(force);
            }

            if (verticalInput < 0 && rb.velocity.magnitude > (maxSpeed * reverseForceMultiplier * speedMultiplier))
            {
                rb.velocity = rb.velocity.normalized * (maxSpeed * reverseForceMultiplier * speedMultiplier);
            }
        }
        else
        {
            RaycastHit hit;
            if (Physics.Raycast(transform.position, -transform.up, out hit, 1.5f, roadLayerMask))
            {
                Vector3 groundNormal = hit.normal;
                Vector3 projectedForward = Vector3.ProjectOnPlane(transform.forward * boostSpeed * speedMultiplier, groundNormal).normalized;

                Vector3 boostForce = projectedForward * boostSpeed * speedMultiplier - rb.velocity;
                rb.AddForce(boostForce, ForceMode.VelocityChange);
            }
            else
            {
                Vector3 boostForce = transform.forward * boostSpeed * speedMultiplier - rb.velocity;
                rb.AddForce(boostForce, ForceMode.VelocityChange);
            }
        }

        animator.SetBool("Move", Mathf.Abs(verticalInput) > 0.01f);
    }


    public void Jump()
    {
        if ((IsGrounded() || jumpCount < maxJump))
        {
            jumpCount++; // 점프 횟수 증가
            isJumping = true;
            rb.velocity = new Vector3(rb.velocity.x, jumpForce, rb.velocity.z);
            animator.SetBool("Jump", true);
        }

        if (rb.velocity.y < 0)
        {
            rb.velocity += Vector3.up * Physics.gravity.y * (fallMultiplier - 1) * Time.fixedDeltaTime;
            animator.SetBool("Jump", false);
        }
    }

    public void Boosts()
    {
        if (rb.velocity.magnitude < boostSpeed && currentBoost > 0 && !isBoosting)
        {
            StartCoroutine(BoostRoutine());
        }
    }

    private IEnumerator BoostRoutine()
    {
        isBoosting = true;
        currentBoost--;

        // 공중에 떠있는지 여부를 확인
        bool isInAir = !Physics.Raycast(transform.position, -transform.up, 1.5f, roadLayerMask);
        float currentBoostDuration = isInAir ? 0.3f : boostDuration; // 공중에 떠있으면 1초, 아니면 기본 부스터 시간 사용

        BoostEffect(true);

        boostingAudioSource.clip = audioClips[1]; // 배열 2번 클립 (부스터 소리)
        boostingAudioSource.Play(); // 오디오 클립 재생 시작
        boostWindAudioSource.clip = audioClips[2];
        boostWindAudioSource.Play();

        // 현재 부스터 유지 시간 대기
        yield return new WaitForSeconds(currentBoostDuration);

        // Boost 종료
        isBoosting = false;
        BoostEffect(false);
    }

    public IEnumerator BoostPadRoutine()
    {
        // Boost 시작
        isBoosting = true;
        BoostEffect(true);

        // 오디오 클립을 매번 설정하고 재생하도록 변경
        boostingAudioSource.clip = audioClips[1]; // 배열 2번 클립 (부스터 소리)
        boostingAudioSource.Play(); // 오디오 클립 재생 시작

        boostWindAudioSource.clip = audioClips[2];
        boostWindAudioSource.Play();

        // Boost 유지 시간
        yield return new WaitForSeconds(boostDuration);

        // Boost 종료
        isBoosting = false;
        BoostEffect(false);
    }

    private void BoostEffect(bool shouldPlay)
    {
        if (speedLineParticleSystem != null)
        {
            if (shouldPlay) speedLineParticleSystem.Play();
            else speedLineParticleSystem.Stop();
        }
        if (LeftboostFire != null && RightboostFire != null)
        {
            if (shouldPlay)
            {
                LeftboostFire.Play();
                RightboostFire.Play();
            }
            else
            {
                LeftboostFire.Stop();
                RightboostFire.Stop();
            }
        }
        animator.SetBool("Run", shouldPlay);
    }


    public void Steer(float horizontalInput)
    {
        // 현재 속도를 기반으로 한 회전 속도 조절
        float speedFactor = rb.velocity.magnitude / maxSpeed;
        speedFactor = Mathf.Pow(speedFactor, 2);
        float rotateAmount = horizontalInput * rotateSpeed * Mathf.Max(speedFactor, 1) * Time.deltaTime;

        if (Mathf.Abs(horizontalInput) > 0)
        {
            transform.Rotate(Vector3.up, rotateAmount, Space.World);
        }
        else
        {
            // 드리프트가 끝나면 차량을 원래 y축 기준으로 회전 상태로 복원
            transform.rotation = Quaternion.Lerp(transform.rotation, Quaternion.Euler(0, transform.eulerAngles.y, 0), Time.deltaTime * 5);

            // 여기서도 드리프트가 끝나면 rotateSpeed를 복원
            rotateSpeed = Mathf.Lerp(rotateSpeed, originalRotateSpeed, Time.deltaTime * 5);
        }
    }

    public void ToggleDrift()
    {
        // 드리프트 상태 토글
        isDrifting = !isDrifting;
    }

    public void Drift()
    {
        if (IsGrounded())
        {
            // 오디오 재생
            if (!driftAudioSource.isPlaying)
            {
                driftAudioSource.clip = audioClips[3]; // 부스터 소리 클립
                driftAudioSource.Play();
            }

            // 이펙트 활성화
            LeftSkid.emitting = true;
            RightSkid.emitting = true;

            float driftDirection = Input.GetAxis("Horizontal") > 0 ? 1f : -1f;
            float verticalInput = Input.GetAxis("Vertical");

            if (Mathf.Abs(driftDirection) > 0.1f)
            {
                // 드리프트 중 회전속도를 증가
                currentRotationSpeed = Mathf.Lerp(currentRotationSpeed, originalRotateSpeed * 5f, Time.deltaTime * 2);

                if (joystick.inputDirection.y > 0)
                {
                    // 미끄러짐 효과 추가
                    Vector3 driftForce = transform.right * driftDirection * driftPower;
                    rb.AddForce(driftForce, ForceMode.Force);
                    FillDriftGauge();
                }
            }
            else
            {
                // 오디오 정지
                if (driftAudioSource.isPlaying)
                {
                    driftAudioSource.Stop();
                }

                // 이펙트 비활성화
                LeftSkid.emitting = false;
                RightSkid.emitting = false;

                // 드리프트가 끝나면 회전속도 점차 복원
                currentRotationSpeed = Mathf.Lerp(currentRotationSpeed, originalRotateSpeed, Time.deltaTime * 20);
            }

            // 회전속도 업데이트
            rotateSpeed = currentRotationSpeed;

            // 드리프트 중 속도 조절
            rb.velocity *= Mathf.Lerp(0.9f, 0.7f, rb.velocity.magnitude / maxSpeed);
        }
       
    }

    private void FillDriftGauge()
    {
        // 드리프트 감지를 위해 차량의 이동 방향과 현재 바라보고 있는 방향의 차이를 계산
        float forwardDotProduct = Vector3.Dot(transform.forward, rb.velocity.normalized);
        float driftStrength = 1 - Mathf.Abs(forwardDotProduct); // 차이가 클수록 드리프트 상태로 간주.

        // 드리프트 강도에 따라 게이지를 충전. 강도가 강할수록 더 많이 충전
        if (driftSlider.value < 1)
        {
            driftSlider.value += driftStrength * driftFillRate * Time.deltaTime;
        }
        else if (currentBoost < maxBoost)
        {
            currentBoost++;
            StartCoroutine(DecreaseDriftGauge());
        }
    }

    private IEnumerator DecreaseDriftGauge()
    {
        while (driftSlider.value > 0)
        {
            driftSlider.value -= driftDecreaseRate * Time.deltaTime;
            yield return null;
        }
    }

    private bool IsGrounded()
    {
        RaycastHit hit;
        float distance = 1.1f;

        if (Physics.Raycast(transform.position, Vector3.down, out hit, distance))
        {
            if (!hit.collider.isTrigger)
            {
                isJumping = false;
                jumpCount = 0; // 땅에 닿았을 때 점프 횟수 초기화
                return true;
            }
        }

        return false;
    }

    public void Respawn()
    {
        this.transform.position = new Vector3(lapController.respawnPointPosition.x, lapController.respawnPointPosition.y + 2.0f, lapController.respawnPointPosition.z);
        this.transform.rotation = lapController.respawnPointRotation;

        // 움직임 멈춤
        rb.velocity = Vector3.zero;
        rb.angularVelocity = Vector3.zero;

        // 충돌 방지 코루틴을 시작
        StartCoroutine(PreventCollision());
    }

    public IEnumerator PreventCollision()
    {
        // Player 태그를 가진 모든 게임 오브젝트를 탐색
        var players = GameObject.FindGameObjectsWithTag("Player");
        foreach (var player in players)
        {
            if (player != this.gameObject)
            {
                // 잠시 동안 다른 플레이어와의 충돌을 무시
                Physics.IgnoreCollision(player.GetComponent<Collider>(), GetComponent<Collider>(), true);
            }
        }

        // 설정한 시간(예: 2초) 동안 대기
        yield return new WaitForSeconds(2f);

        // 충돌 무시를 해제합니다.
        foreach (var player in players)
        {
            if (player != this.gameObject)
            {
                Physics.IgnoreCollision(player.GetComponent<Collider>(), GetComponent<Collider>(), false);
            }
        }
    }
}
